# amr-sentinel-vivli2026

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  pyproject.toml
app/: README.md  demo_calibration.json  streamlit_app.py
data/: README.md
docs/: analysis_plan_2026.md  cover_page_2026.md  deviation_log.md  final_report_2026.md  finalist_pressure_test_2026-06-11.md  osf_addendum_2026-06-06.md  preregistration.md  reference_rd_alignment_2026-06-09.md  reference_verified_2026-06-06.md  references_2026.md  secure_env_runbook.md  strategy_2026.md  vivli_relinkage_request.md  zenodo_release.md
notebooks/: README.md
scripts/: build_report_pdf.sh  confirmatory_run.py  dump_pipeline.py  headline_manifest.json  ingest_hub_genus.py  make_figures.py
src/amr_sentinel_vivli/: __init__.py  bayesian_excess_los.py  bayesian_projection.py  config.py  cox_mortality.py  data_loading.py  evidence_figures.py  evidence_synthesis.py  excess_los.py  excess_los_figures.py  excess_los_sensitivity.py  isolate_mechanisms.py  mortality_bridge.py  pipeline.py  projection_figures.py  rd_alignment.py  rd_alignment_figures.py  sensitivity.py  stewardship_gformula.py  surveillance_alignment.py  surveillance_alignment_figures.py
tests/: test_bayesian_excess_los.py  test_bayesian_projection.py  test_config.py  test_data_loading.py  test_data_loading_atlas.py  test_data_loading_isolates.py  test_evidence_synthesis.py  test_excess_los.py  test_excess_los_sensitivity.py  test_isolate_mechanisms.py  test_rd_alignment.py  test_stewardship_gformula.py  test_surveillance_alignment.py
