[project]
name = "amr-sentinel-vivli2026"
version = "0.1.0"
description = "Pre-registered SPIDAAR-anchored AMR mortality & public-R&D-alignment analysis — 2026 Vivli AMR Data Challenge"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
  { name = "Tejashwar Reddy Katika" },
  { name = "Akhilesh Reddy Katika" },
]

# Versions pinned per pre-registration §12 (lower bounds; exact pins land in uv.lock).
dependencies = [
  "lifelines>=0.28",      # Step 1 Aalen-Johansen excess-LOS (state occupation) + Cox + IPTW
  "pymc>=5.10",           # Step 2 Bayesian hierarchical projection + LOS partial pooling
  "arviz>=0.18",          # convergence diagnostics (R-hat, ESS)
  "pandas>=2.2",
  "xlrd>=2.0.1",          # read legacy .xls (SPIDAAR patient/isolate/definitions exports)
  "numpy>=1.26",
  "scikit-learn>=1.4",    # propensity / ascertainment models
  "scipy>=1.12",          # Spearman, bootstrap (BCa), restricted-mean integration, Monte Carlo
  "statsmodels>=0.14",    # piecewise-exponential/Poisson competing-risks, g-formula standardization
  "preliz>=0.4",          # Bayesian prior elicitation (Component 2 null-centred priors)
  "matplotlib>=3.8",
  "streamlit>=1.33",      # Step 5 stewardship simulator artifact
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
  "dvc>=3.0",
  "mlflow>=2.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amr_sentinel_vivli"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
